--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -185,9 +185,17 @@
     <Compile Include="Migrations\201706011818473_AddIsSubcribedToCustomer.Designer.cs">
       <DependentUpon>201706011818473_AddIsSubcribedToCustomer.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201706011822269_AddMemberShipType.cs" />
-    <Compile Include="Migrations\201706011822269_AddMemberShipType.Designer.cs">
-      <DependentUpon>201706011822269_AddMemberShipType.cs</DependentUpon>
+    <Compile Include="Migrations\201706012245012_AddAndInsertMembershipTypes.cs" />
+    <Compile Include="Migrations\201706012245012_AddAndInsertMembershipTypes.Designer.cs">
+      <DependentUpon>201706012245012_AddAndInsertMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706012246329_ReEnterInsertMembershipTypes.cs" />
+    <Compile Include="Migrations\201706012246329_ReEnterInsertMembershipTypes.Designer.cs">
+      <DependentUpon>201706012246329_ReEnterInsertMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706012253034_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201706012253034_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201706012253034_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -198,7 +206,6 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="VidlyContext.cs" />
     <Compile Include="ViewModels\CustomerViewModel.cs" />
     <Compile Include="ViewModels\MovieViewModel.cs" />
   </ItemGroup>
@@ -280,8 +287,14 @@
     <EmbeddedResource Include="Migrations\201706011818473_AddIsSubcribedToCustomer.resx">
       <DependentUpon>201706011818473_AddIsSubcribedToCustomer.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706011822269_AddMemberShipType.resx">
-      <DependentUpon>201706011822269_AddMemberShipType.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706012245012_AddAndInsertMembershipTypes.resx">
+      <DependentUpon>201706012245012_AddAndInsertMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706012246329_ReEnterInsertMembershipTypes.resx">
+      <DependentUpon>201706012246329_ReEnterInsertMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706012253034_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201706012253034_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
