--- a/Vidly/Web.config
+++ b/Vidly/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-  <add name="VidlyContext" connectionString="data source=skoog.database.windows.net;initial catalog=Vidly;user id=askoog;password=Family11;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+  <add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS;initial catalog=Vidly;integrated security=SSPI;" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
